add putUserAcoount function
